--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    <link rel="stylesheet" href="assets/stylesheet.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/stylesheet.css">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 </head>
+
 <body>
 
     <div class="header">
@@ -37,10 +41,13 @@
 
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100" src="assets/images/creamsilk-banner1.png" alt="First slide">
@@ -52,8 +59,8 @@
                 <img class="d-block w-100" src="assets/images/creamsilk-banner3.png" alt="Third slide">
             </div>
         </div>
-    </div> 
-    
+    </div>
+
     <div class="golden-section"></div>
 
     <div class="collections">
@@ -83,10 +90,12 @@
     </div>
 
     <div class="treatment">
-        <div class="golden-section"></div>        
-            <h2>THE SALON EXPERT TREATMENT</h2>
-                <iframe width="1260" height="650" src="https://www.youtube.com/embed/JEzVeqx6jhs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>    
+        <div class="golden-section"></div>
+        <h2>THE SALON EXPERT TREATMENT</h2>
+        <iframe width="1260" height="650" src="https://www.youtube.com/embed/JEzVeqx6jhs" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+    </div>
 
     <div class="golden-section"></div>
 
@@ -94,9 +103,12 @@
         <div class="container">
             <div class="shop-now">
                 <h3>SHOP NOW AT</h3>
-                <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="assets/images/Lazada logo.png" alt="Lazada"></a>
-                <a href="https://shopee.ph/unilever_personalcare?is_from_login=true"><img src="assets/images/Shopee logo.png" alt="Shopee"></a>
-                <a href="https://www.watsons.com.ph/all-brands/b/154216/creamsilk"><img src="assets/images/watsons logo.png" alt="Watsons"></a>
+                <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="assets/images/Lazada logo.png"
+                        alt="Lazada"></a>
+                <a href="https://shopee.ph/unilever_personalcare?is_from_login=true"><img
+                        src="assets/images/Shopee logo.png" alt="Shopee"></a>
+                <a href="https://www.watsons.com.ph/all-brands/b/154216/creamsilk"><img
+                        src="assets/images/watsons logo.png" alt="Watsons"></a>
             </div>
             <div class="navigation">
                 <h3>NAVIGATION</h3>
@@ -107,21 +119,23 @@
                 </ul>
             </div>
             <div class="join-pack">
-                    <h3>JOIN THE PACK!</h3>
-                    <div class="social-icons">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-youtube"></i>
-                        <i class="fas fa-times"></i>
-                    </div>
-                    <hr class="golden-line">
-                    <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
-                    <input type="email" placeholder="Email Address" required>
-                    <button>SIGN UP</button>
+                <h3>JOIN THE PACK!</h3>
+                <div class="social-icons">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-youtube"></i>
+                    <i class="fas fa-times"></i>
                 </div>
+                <hr class="golden-line">
+                <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other
+                    relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring
+                    that your personal information is protected.</p>
+                <input type="email" placeholder="Email Address" required>
+                <button>SIGN UP</button>
+            </div>
         </div>
-    
-        <div class="golden-line-footer"></div> 
+
+        <div class="golden-line-footer"></div>
         <div class="bottom">
             <p>©2024 Unilever. All rights reserved.</p>
             <a href="#">Privacy Notice</a> |
@@ -136,11 +150,12 @@
         document.addEventListener('DOMContentLoaded', function () {
             var carouselElement = document.getElementById('carouselExampleIndicators');
             var carousel = new bootstrap.Carousel(carouselElement, {
-                interval: 3600, 
-                wrap: true 
+                interval: 3600,
+                wrap: true
             });
             carousel.cycle();
         });
     </script>
 </body>
+
 </html>
