single prod with new styles

--- a/conditioner-prod1.html
+++ b/conditioner-prod1.html
@@ -9,12 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/single-products-style.css">
-
 </head>
 <body>
-
     <div class="header">
-        <a href="index.html"><img src="https://shorturl.at/uB5BH"" alt="Cream Silk Logo"></a>
+        <a href="index.html"><img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo"></a>
         <div class="nav">
             <div class="dropdown">
                 <a href="#">Products</a>
@@ -39,8 +37,6 @@
         <h1>OUR CONDITIONER COLLECTION</h1>
     </div>
 
-</head>
-<body>
     <div class="container">
         <div class="card1">
             <img src="path_to_image.png" alt="Cream Silk Ultimate Reborn Standout Straight Tri-Oleo Conditioner">
@@ -67,7 +63,8 @@
             <p>Review content goes here...</p>
         </div>
     </div>
-    <script 
+
+    <script>
     function openTab(evt, tabName) {
         var i, tabcontent, tablinks;
         tabcontent = document.getElementsByClassName("tab-content");
@@ -84,4 +81,3 @@
     </script>
 </body>
 </html>
-
