updated indiv prod and style

--- a/conditioner-prod1.html
+++ b/conditioner-prod1.html
@@ -42,7 +42,7 @@
 
     <div class="container">
         <div class="card1">
-            <img src="path_to_image.png" alt="Cream Silk Ultimate Reborn Standout Straight Tri-Oleo Conditioner">
+            <img src="https://assets.unileversolutions.com/v1/38908401.png" alt="Cream Silk Ultimate Reborn Standout Straight Tri-Oleo Conditioner">
             <h1>CREAM SILK ULTIMATE REBORN STANDOUT STRAIGHT TRI-OLEO CONDITIONER</h1>
             <p>10X STRAIGHTER HAIR Standout Straight with Frizz Defense Complex to make unruly and frizzy hair straighter, smoother, with less frizz</p>
             <button>Buy Now</button>
