changed logo size

--- a/about-us-page.html
+++ b/about-us-page.html
@@ -40,7 +40,7 @@
                 <h1>WE ARE UNILEVER</h1>
                 <p>Established over 100 years ago, we are one of the world’s largest consumer goods companies. We are known for our great brands and our belief that doing business the right way drives superior performance.</p>
             </div>
-            <div class="logo">
+            <div class="logo-unilever">
                 <img src="assets/images/unilever logo.png" alt="Unilever Logo">
             </div>
         </div>
