--- a/about-us-page.html
+++ b/about-us-page.html
@@ -63,7 +63,17 @@
     </div>
 
     <div class="golden-section"></div>
+
+    <div class="modern">
+        <h2>CREAMSILK FOR THE MODERN FILIPINA</h2>
+        <img src="assets/images/Heart evangelista filipina pic_about us.png" alt="Heart Image";
+        <p>Creamsilk loves every Filipina. It wants her to achieve her goals and be the best that she can be.</p>
+        <p>Creamsilk also knows how challenging it can be to make it in a world where tough competition always thrives.</p>
+    </div>
+
     
+    <div class="golden-section"></div>
+
     <footer class="footer">
         <div class="container">
             <div class="shop-now">
