--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/stylesheet.css">
-    <link rel="stylesheet" href="assets/css/stylesheet.css">
+    <link rel="stylesheet" href="assets/css/homepage-stylesheet.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var carouselElement = document.getElementById('carouselExampleIndicators');
+            var carousel = new bootstrap.Carousel(carouselElement, {
+                interval: 3600,
+                wrap: true
+            });
+            carousel.cycle();
+        });
+    </script>
 
     <div class="header">
         <a href="index.html"><img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo"></a>
@@ -104,12 +114,13 @@
             <div class="shop-now">
                 <h3>SHOP NOW AT</h3>
                 <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="assets/images/Lazada logo.png"
-                        alt="Lazada"></a>
+                    alt="Lazada"></a>
                 <a href="https://shopee.ph/unilever_personalcare?is_from_login=true"><img
-                        src="assets/images/Shopee logo.png" alt="Shopee"></a>
+                    src="assets/images/Shopee logo.png" alt="Shopee"></a>
                 <a href="https://www.watsons.com.ph/all-brands/b/154216/creamsilk"><img
-                        src="assets/images/watsons logo.png" alt="Watsons"></a>
+                    src="assets/images/watsons logo.png" alt="Watsons"></a>
             </div>
+            
             <div class="navigation">
                 <h3>NAVIGATION</h3>
                 <ul>
@@ -119,23 +130,21 @@
                 </ul>
             </div>
             <div class="join-pack">
-                <h3>JOIN THE PACK!</h3>
-                <div class="social-icons">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-youtube"></i>
-                    <i class="fas fa-times"></i>
+                    <h3>JOIN THE PACK!</h3>
+                    <div class="social-icons">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-youtube"></i>
+                        <i class="fas fa-times"></i>
+                    </div>
+                    <hr class="golden-line">
+                    <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
+                    <input type="email" placeholder="Email Address">
+                    <button>SIGN UP</button>
                 </div>
-                <hr class="golden-line">
-                <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other
-                    relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring
-                    that your personal information is protected.</p>
-                <input type="email" placeholder="Email Address" required>
-                <button>SIGN UP</button>
-            </div>
         </div>
-
-        <div class="golden-line-footer"></div>
+    
+        <div class="golden-line-footer"></div> 
         <div class="bottom">
             <p>©2024 Unilever. All rights reserved.</p>
             <a href="#">Privacy Notice</a> |
@@ -146,16 +155,6 @@
         </div>
     </footer>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var carouselElement = document.getElementById('carouselExampleIndicators');
-            var carousel = new bootstrap.Carousel(carouselElement, {
-                interval: 3600,
-                wrap: true
-            });
-            carousel.cycle();
-        });
-    </script>
 </body>
 
 </html>
