updated index and the footer links of homepage and products-con

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/stylesheet.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" 
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/homepage-stylesheet.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" 
+    integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var carouselElement = document.getElementById('carouselExampleIndicators');
-            var carousel = new bootstrap.Carousel(carouselElement, {
+        $(document).ready(function() {
+            $('#carouselExampleIndicators').carousel({
                 interval: 3600,
-                wrap: true
+                wrap: true 
             });
-            carousel.cycle();
         });
     </script>
 
@@ -48,25 +48,21 @@
     </div>
 
     <div class="golden-line"></div>
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-        </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="assets/images/creamsilk-banner1.png" alt="First slide">
+                <img src="assets/images/creamsilk-banner1.png" class="d-block w-100" alt="1">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/creamsilk-banner2.jpg" alt="Second slide">
+                <img src="assets/images/creamsilk-banner2.jpg" class="d-block w-100" alt="2">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="assets/images/creamsilk-banner3.png" alt="Third slide">
+                <img src="assets/images/creamsilk-banner3.png" class="d-block w-100" alt="3">
             </div>
         </div>
     </div>
@@ -110,7 +106,7 @@
     <div class="golden-section"></div>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container" style="display: flex; justify-content: center; text-align: center;">
             <div class="shop-now">
                 <h3>SHOP NOW AT</h3>
                 <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="assets/images/Lazada logo.png"
@@ -122,7 +118,7 @@
             </div>
             
             <div class="navigation">
-                <h3>NAVIGATION</h3>
+                <h3> NAVIGATION</h3>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Products</a></li>
@@ -145,13 +141,13 @@
         </div>
     
         <div class="golden-line-footer"></div> 
-        <div class="bottom">
+        <div class="bottom" style="text-align: center;">
             <p>©2024 Unilever. All rights reserved.</p>
-            <a href="#">Privacy Notice</a> |
-            <a href="#">Legal</a> |
-            <a href="#">Cookie Notice</a> |
+            <a href="https://www.unilevernotices.com/privacy-notices/philippines-english.html">Privacy Notice</a> |
+            <a href="https://www.hul.co.in/legal/">Legal</a> |
+            <a href="https://www.unilevernotices.com/cookie-notices/philippines-english.html">Cookie Notice</a> |
             <a href="#">Navigation</a> |
-            <a href="#">Accessibility</a>
+            <a href="https://notices.unilever.com/en/">Accessibility</a>
         </div>
     </footer>
 
