--- a/conditioner-prod1.html
+++ b/conditioner-prod1.html
@@ -1,86 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cream Silk</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/single-products-style.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/single-products-style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="header">
-        <a href="index.html"><img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo"></a>
-        <div class="nav">
-            <div class="dropdown">
-                <a href="#">Products</a>
-                <div class="dropdown-content">
-                    <a href="productspage-conditioner.html">Conditioner</a>
-                    <a href="productspage-ultraconditioner.html">Ultra Conditioners</a>
-                    <a href="productspage-lightconditioner.html">Light Conditioners</a>
-                    <a href="productspage-hairtreatment.html">Hair Treatment</a>
-                </div>
-            </div>
-            <a href="about-us-page.html">About Us</a>
+      <a href="index.html"
+        ><img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo"
+      /></a>
+      <div class="nav">
+        <div class="dropdown">
+          <a href="#">Products</a>
+          <div class="dropdown-content">
+            <a href="productspage-conditioner.html">Conditioner</a>
+            <a href="productspage-ultraconditioner.html">Ultra Conditioners</a>
+            <a href="productspage-lightconditioner.html">Light Conditioners</a>
+            <a href="productspage-hairtreatment.html">Hair Treatment</a>
+          </div>
         </div>
-        <div class="search-bar">
-            <i class="fa fa-search" aria-hidden="true"></i>
-            <input type="text" placeholder="Search...">
-        </div>
+        <a href="about-us-page.html">About Us</a>
+      </div>
+      <div class="search-bar">
+        <i class="fa fa-search" aria-hidden="true"></i>
+        <input type="text" placeholder="Search..." />
+      </div>
     </div>
 
-    <div class="golden-line"></div> 
+    <div class="golden-line"></div>
 
     <div class="banner">
-        <h1>OUR CONDITIONER COLLECTION</h1>
+      <h1>OUR CONDITIONER COLLECTION</h1>
     </div>
 
     <div class="container">
-        <div class="card1">
-            <img src="https://assets.unileversolutions.com/v1/38908401.png" alt="Cream Silk Ultimate Reborn Standout Straight Tri-Oleo Conditioner">
-            <h1>CREAM SILK ULTIMATE REBORN STANDOUT STRAIGHT TRI-OLEO CONDITIONER</h1>
-            <p>10X STRAIGHTER HAIR Standout Straight with Frizz Defense Complex to make unruly and frizzy hair straighter, smoother, with less frizz</p>
-            <button>Buy Now</button>
-        </div>
-        <div class="tabs">
-            <button class="tab active" onclick="openTab(event, 'about')">ABOUT THIS PRODUCT</button>
-            <button class="tab" onclick="openTab(event, 'ingredients')">INGREDIENTS</button>
-            <button class="tab" onclick="openTab(event, 'how-to-use')">HOW TO USE</button>
-            <button class="tab" onclick="openTab(event, 'review')">REVIEW</button>
-        </div>
-        <div id="about" class="tab-content active">
-            <p>Standout Straight with Frizz Defense Complex is specially designed to make unruly and frizzy hair straighter, smoother, and helps reduce frizz, giving you beyond beautiful hair every day. Based on lab tests, Standout Straight repairs and protects for soft and smooth hair with daily usage. Transform your hair up to 4x straighter from the first wash compared to non-conditioning shampoo based on lab test. ASC Ref. Code U101P072617C</p>
-        </div>
-        <div id="ingredients" class="tab-content">
-            <p>Ingredients content goes here...</p>
-        </div>
-        <div id="how-to-use" class="tab-content">
-            <p>How to use content goes here...</p>
-        </div>
-        <div id="review" class="tab-content">
-            <p>Review content goes here...</p>
-        </div>
+      <div class="card1">
+        <img
+          src="https://assets.unileversolutions.com/v1/38908401.png"
+          alt="Cream Silk Ultimate Reborn Standout Straight Tri-Oleo Conditioner"
+        />
+        <h1>
+          CREAM SILK ULTIMATE REBORN STANDOUT STRAIGHT TRI-OLEO CONDITIONER
+        </h1>
+        <p>
+          10X STRAIGHTER HAIR Standout Straight with Frizz Defense Complex to
+          make unruly and frizzy hair straighter, smoother, with less frizz
+        </p>
+        <button>Buy Now</button>
+      </div>
+      <div class="tabs">
+        <button class="tab active" onclick="openTab(event, 'about')">
+          ABOUT THIS PRODUCT
+        </button>
+        <button class="tab" onclick="openTab(event, 'ingredients')">
+          INGREDIENTS
+        </button>
+        <button class="tab" onclick="openTab(event, 'how-to-use')">
+          HOW TO USE
+        </button>
+      </div>
+      <div id="about" class="tab-content active">
+        <p>
+          Standout Straight with Frizz Defense Complex is specially designed to
+          make unruly and frizzy hair straighter, smoother, and helps reduce
+          frizz, giving you beyond beautiful hair every day. Based on lab tests,
+          Standout Straight repairs and protects for soft and smooth hair with
+          daily usage. Transform your hair up to 4x straighter from the first
+          wash compared to non-conditioning shampoo based on lab test. ASC Ref.
+          Code U101P072617C
+        </p>
+      </div>
+      <div id="ingredients" class="tab-content">
+        <p>
+          Water, Cetearyl Alcohol, Dimethicone, Behentrimonium Chloride,
+          Perfume, Dipropylene Glycol, Stearamidopropyl Dimethylamine,
+          Amodimethicone, Methylparaben, Lactic Acid, Disodium EDTA,
+          Cyclotetrasiloxane, Phenoxyethanol, Cetrimonium Chloride, PEG-7
+          Propylheptyl Ether, Lysine HCl, Magnesium Nitrate, Panthenol,
+          Methylchloroisothiazolinone, Magnesium Chloride,
+          Methylisothiazolinone, Hydrolyzed Keratin, Citric Acid, Acetic Acid,
+          Sodium Chloride, Sodium Sulfate, CI 17200
+        </p>
+      </div>
+      <div id="how-to-use" class="tab-content">
+        <p>After shampoo, massage through hair especially on ends. Rinse well after 1 minute. For best results, use every day. </p>
+      </div>
+      </div>
     </div>
 
     <script>
-    function openTab(evt, tabName) {
+      function openTab(evt, tabName) {
         var i, tabcontent, tablinks;
         tabcontent = document.getElementsByClassName("tab-content");
         for (i = 0; i < tabcontent.length; i++) {
-            tabcontent[i].style.display = "none";
+          tabcontent[i].style.display = "none";
         }
         tablinks = document.getElementsByClassName("tab");
         for (i = 0; i < tablinks.length; i++) {
-            tablinks[i].className = tablinks[i].className.replace(" active", "");
+          tablinks[i].className = tablinks[i].className.replace(" active", "");
         }
         document.getElementById(tabName).style.display = "block";
         evt.currentTarget.className += " active";
-    }
+      }
     </script>
-</body>
+  </body>
 </html>
