updated the design of index/homepage

--- a/index.html
+++ b/index.html
@@ -73,24 +73,24 @@
         <h1>COLLECTIONS</h1>
         <div class="collection-items">
             <div class="card">
-                <img src="assets/images/ultimate-reborn.png" alt="New Ultimate Reborn Range">
+                <a href="productspage-conditioner.html"><img src="assets/images/ultimate-reborn.png" alt="New Ultimate Reborn Range"></a>
                 <div class="card-content"></div>
-                <p>New Ultimate Reborn Range</p>
+                <p>Ultimate Reborn Range Collection</p>
             </div>
             <div class="card">
-                <img src="assets/images/keratin-rescue.png" alt="Triple Keratin Rescue">
+                <a href="productspage-ultra-cond.html"><img src="assets/images/keratin-rescue.png" alt="Triple Keratin Rescue"></a>
                 <div class="card-content"></div>
-                <p>Triple Keratin Rescue</p>
+                <p>Triple Keratin Rescue Collection</p>
             </div>
             <div class="card">
-                <img src="assets/images/powerfusion-collection.jpg" alt="Rich Organics">
+                <a href="#"><img src="assets/images/rich-organics.jpg" alt="Rich Organics"></a>
                 <div class="card-content"></div>
-                <p>Rich Organics</p>
+                <p>Rich Organics Collection</p>
             </div>
             <div class="card">
-                <img src="assets/images/powerfusion-collection.jpg" alt="Keratin Treatment">
+                <a href=""><img src="assets/images/keratin-treatment.jpg" alt="Keratin Treatment"></a>
                 <div class="card-content"></div>
-                <p>Keratin Treatment</p>
+                <p>Keratin Treatment Collection</p>
             </div>
         </div>
     </div>
