updated back button for single products

--- a/conditioner-prod1.html
+++ b/conditioner-prod1.html
@@ -49,7 +49,7 @@
     <div class="golden-line"></div>
 
     <div class="banner">
-      <h1>OUR CONDITIONER COLLECTION</h1>
+      <h1>CONDITIONER COLLECTION</h1>
     </div>
 
     <div class="container">
@@ -107,6 +107,12 @@
       </div>
     </div>
 
+    
+    <a href="productspage-conditioner.html" class="back-icon">
+        <i class="fas fa-arrow-circle-left"></i> Back to Products Page
+      </a>
+    
+
     <script>
       function openTab(evt, tabName) {
         var i, tabcontent, tablinks;
@@ -122,5 +128,8 @@
         evt.currentTarget.className += " active";
       }
     </script>
+
+
+
   </body>
 </html>
