changed containers and fixed position of 1st part

--- a/about-us-page.html
+++ b/about-us-page.html
@@ -35,16 +35,17 @@
     <div class="golden-line"></div>
 
     <div class="banner">
-        <div class="banner-content">
-            <div class="text">
+        <div class="banner-content-section">
+            <div class="banner-text-container">
                 <h1>WE ARE UNILEVER</h1>
                 <p>Established over 100 years ago, we are one of the world’s largest consumer goods companies. We are known for our great brands and our belief that doing business the right way drives superior performance.</p>
             </div>
-            <div class="logo-unilever">
+            <div class="banner-image-container">
                 <img src="assets/images/unilever logo.png" alt="Unilever Logo">
             </div>
         </div>
     </div>
+    
 
     <div class="golden-section"></div>
 
