--- a/index.html
+++ b/index.html
@@ -26,6 +26,26 @@
             });
         });
     </script>
+    <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const searchInput = document.getElementById('searchInput');
+        const cards = document.querySelectorAll('.card');
+
+        searchInput.addEventListener('input', function (event) {
+            const query = event.target.value.toLowerCase();
+
+            cards.forEach(card => {
+                const name = card.getAttribute('data-name').toLowerCase();
+                if (name.includes(query)) {
+                    card.style.display = 'block';
+                } else {
+                    card.style.display = 'none';
+                }
+            });
+        });
+    });
+    </script>
+    
 
     <div class="header">
         <a href="index.html"><img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo"></a>
@@ -43,7 +63,7 @@
         </div>
         <div class="search-bar">
             <i class="fa fa-search" aria-hidden="true"></i>
-            <input type="text" placeholder="Search...">
+            <input type="text" id="searchInput" placeholder="Search...">
         </div>
     </div>
 
@@ -72,25 +92,25 @@
     <div class="collections">
         <h1>COLLECTIONS</h1>
         <div class="collection-items">
-            <div class="card">
+            <div class="card" data-name="Ultimate Reborn Range Collection">
                 <a href="productspage-conditioner.html"><img src="assets/images/ultimate-reborn.png" alt="New Ultimate Reborn Range"></a>
                 <div class="card-content"></div>
-                <p>Ultimate Reborn Range Collection</p>
+                <h3>Ultimate Reborn Range Collection</h3>
             </div>
-            <div class="card">
+            <div class="card" data-name="Triple Keratin Rescue Collection">
                 <a href="productspage-ultra-cond.html"><img src="assets/images/keratin-rescue.png" alt="Triple Keratin Rescue"></a>
                 <div class="card-content"></div>
-                <p>Triple Keratin Rescue Collection</p>
+                <h3>Triple Keratin Rescue Collection</h3>
             </div>
-            <div class="card">
+            <div class="card" data-name="Rich Organics Collection">
                 <a href="#"><img src="assets/images/rich-organics.jpg" alt="Rich Organics"></a>
                 <div class="card-content"></div>
-                <p>Rich Organics Collection</p>
+                <h3>Rich Organics Collection</h3>
             </div>
-            <div class="card">
+            <div class="card" data-name="Keratin Treatment Collection">
                 <a href=""><img src="assets/images/keratin-treatment.jpg" alt="Keratin Treatment"></a>
                 <div class="card-content"></div>
-                <p>Keratin Treatment Collection</p>
+                <h3>Keratin Treatment Collection</h3>
             </div>
         </div>
     </div>
@@ -120,23 +140,25 @@
             <div class="navigation">
                 <h3> NAVIGATION</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">Products</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="about-us-page.html">About Us</a></li>
                 </ul>
             </div>
             <div class="join-pack">
                     <h3>JOIN THE PACK!</h3>
                     <div class="social-icons">
-                        <i class="fab fa-facebook-f"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-youtube"></i>
-                        <i class="fas fa-times"></i>
+                        <a href="https://www.facebook.com/creamsilkph/"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/creamsilkph/?hl=en"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/user/CreamSilkPhil"><i class="fab fa-youtube"></i></a>
+                        <a href="https://x.com/creamsilkph?lang=en"><i class="fas fa-times"></i></a>
                     </div>
                     <hr class="golden-line">
                     <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
-                    <input type="email" placeholder="Email Address">
-                    <button>SIGN UP</button>
+                    <form>
+                    <input type="email" placeholder="Email Address" required>
+                    <button>SIGN UP</button>                        
+                    </form>
                 </div>
         </div>
     
