--- a/productspage-ultra-cond.html
+++ b/productspage-ultra-cond.html
@@ -62,7 +62,7 @@
             </div>
     
             <div class="product-card">
-                <img class="product-image-default" src="assets/images/cream silk ultimate reborn dry damage control product.png" alt="Product 2">
+                <img class="product-image-default" src="assets/images/cream silk triple keratin rescue conditioner ultimate color revive.jpg" alt="Product 2">
                 <img class="product-image-hover" src="assets/images/Catriona Gray hover pic_products.jpg" alt="Product 2 Hover">
                 <h3>Cream Silk Keratin Treatment</h3>
                 <div class="stars">
