--- a/about-us-page.html
+++ b/about-us-page.html
@@ -65,15 +65,16 @@
 
     <div class="golden-section"></div>
 
-    <div class="content-section">
-        <div class="image-container">
+    <section class="filipina-content-section">
+        <div class="filipina-text-container">
+            <h2>CREAMSILK FOR THE MODERN FILIPINA</h2>
+            <p>Creamsilk loves every Filipina. It wants her to achieve her goals and be the best that she can be. Creamsilk also knows how challenging it can be to make it in a world where tough competition always thrives.</p>
+        </div>
+        <div class="filipina-image-container">
             <img src="assets/images/Heart evangelista filipina pic_about us.png" alt="Heart Evangelista">
         </div>
-        <div class="text-container">
-            <h2>CREAMSILK FOR THE MODERN FILIPINA</h2>
-            <p>Creamsilk loves every Filipina. It wants her to achieve her goals and be the best that she can be.Creamsilk also knows how challenging it can be to make it in a world where tough competition always thrives.</p>
-        </div>
-    </div>
+    </section>
+    
 
    
     <div class="golden-section"></div>
