--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="#">Products</a>
                 <div class="dropdown-content">
                     <a href="productspage-conditioner.html">Conditioner</a>
-                    <a href="productspage-ultraconditioner.html">Ultra Conditioners</a>
+                    <a href="productspage-ultra-cond.html">Ultra Conditioners</a>
                     <a href="productspage-lightconditioner.html">Light Conditioners</a>
                     <a href="productspage-hairtreatment.html">Hair Treatment</a>
                 </div>
