--- a/conditioner-prod5.html
+++ b/conditioner-prod5.html
@@ -102,7 +102,7 @@
     <div class="golden-section"></div>
 
       <footer class="footer">
-      <div class="container">
+      <div class="container-foot">
           <div class="shop-now">
               <h3>SHOP NOW AT</h3>
               <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="assets/images/Lazada logo.png"
