--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <h3> NAVIGATION</h3>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="productspage-conditioner.html">Products</a></li>
                     <li><a href="about-us-page.html">About Us</a></li>
                 </ul>
             </div>
@@ -135,9 +135,9 @@
                     </div>
                     <hr class="golden-line">
                     <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
-                    <form>
-                    <input type="email" placeholder="Email Address" required>
-                    <button>SIGN UP</button>                        
+                    <form id="sign-up">
+                        <input type="email" placeholder="Email Address" required>
+                        <button>SIGN UP</button>                   
                     </form>
                 </div>
         </div>
