--- a/productspage-conditioner.html
+++ b/productspage-conditioner.html
@@ -20,7 +20,7 @@
             <a href="#">Products</a>
             <div class="dropdown-content">
                 <a href="productspage-conditioner.html">Conditioner</a>
-                <a href="productspage-ultraconditioner.html">Ultra Conditioners</a>
+                <a href="productspage-ultra-cond.html">Ultra Conditioners</a>
                 <a href="productspage-lightconditioner.html">Light Conditioners</a>
                 <a href="productspage-hairtreatment.html">Hair Treatment</a>
             </div>
@@ -136,23 +136,25 @@
         <div class="sitemap">
             <h3>NAVIGATION</h3>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="productspage-conditioner.html">Products</a></li>
+                <li><a href="about-us-page.html">About Us</a></li>
             </ul>
         </div>
         <div class="join-pack">
                 <h3>JOIN THE PACK!</h3>
                 <div class="social-icons">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-instagram"></i>
-                    <i class="fab fa-youtube"></i>
-                    <i class="fas fa-times"></i>
+                    <a href="https://www.facebook.com/creamsilkph/"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/creamsilkph/?hl=en"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/user/CreamSilkPhil"><i class="fab fa-youtube"></i></a>
+                    <a href="https://x.com/creamsilkph?lang=en"><i class="fas fa-times"></i></a>
                 </div>
                 <hr class="golden-line">
                 <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
-                <input type="email" placeholder="Email Address">
-                <button>SIGN UP</button>
+                <form id="sign-up">
+                <input type="email" placeholder="Email Address" required>
+                <button>SIGN UP</button>                   
+                </form>
             </div>
     </div>
 
