removed the closing a tag

--- a/productspage-conditioner.html
+++ b/productspage-conditioner.html
@@ -64,12 +64,11 @@
             </div>
     
             <div class="product-card">
-                <a href="conditioner-prod2.html" style="text-decoration: none;"></a>
+                <a href="conditioner-prod2.html" style="text-decoration: none;">
                     <img class="product-image-default" src="assets/images/cream silk ultimate reborn dry damage control product.png" alt="Product 2">
                     <img class="product-image-hover" src="assets/images/Catriona Gray hover pic_products.jpg" alt="Product 2 Hover">
                     <h3>Cream Silk Ultimate Reborn Dry Damage Control Tri-Oleo Conditioner</h3>                   
                 </a>  
-
                 <div class="stars">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
