--- a/conditioner-prod5.html
+++ b/conditioner-prod5.html
@@ -54,14 +54,14 @@
     <div class="container">
       <div class="card1">
         <img
-          src="https://assets.unileversolutions.com/v1/38908279.png"
-          alt="CREAM SILK ULTIMATE REBORN HAIRFALL DEFENSE TRI-OLEO CONDITIONER"
+          src="https://assets.unileversolutions.com/v1/38908691.png"
+          alt="Cream Silk Ultimate Reborn Standout Straight Tri-Oleo Conditioner"
         />
         <h1>
-            CCREAM SILK ULTIMATE REBORN HAIRFALL DEFENSE TRI-OLEO CONDITIONER
+            CREAM SILK ULTIMATE REBORN LONG & LUSCIOUS TRI-OLEO CONDITIONER
         </h1>
         <p>
-    Suffering from hairfall? Use a hair fall rescue conditioner or hair fall defense conditioner like Cream Silk Hair Fall Control Conditioner, our Cream Silk Green. It’s the hair conditioner for hair fall and conditioner for long hair with Break-Shield Complex. It is designed to make weak and brittle hair stronger from roots to tips. Not only that, it’s also the long hair conditioner that can help you grow healthy strands. So, if you need a conditioner for hair fall, choose Cream Silk Green for your hair fall conditioner. Anti hair fall and anti hair loss conditioners need not be expensive. 
+            Long & Luscious with Fibra-Boost Complex makes hair fibers more beautiful as they grow long, boosting the nourishment of each hair strand to the tips. When you notice hair lightening or hair turning from dark to light hair, it may signal a problem with the strands. Address lightening dark hair with this conditioner that nourishes your every strand to avoid light hair.
         </p>
         <button>Buy Now</button>
       </div>
@@ -78,12 +78,12 @@
       </div>
       <div id="about" class="tab-content active">
         <p>
-            Hair Fall Defense with Break-Shield Complex is specially designed to make weak and brittle hair stronger from the roots to tips (exposed hair of the scalp). Transform your hair to softer, stronger hair and get up to 98% less hair fall from the 1st wash, based on less breakage observed on lab tests vs non-conditioning shampoo. ASC Ref. Code U102P072617C 
+            Damage Control with Fiber Repair Complex is specially designed to repair weak and damaged hair, protecting it against damage. From the 1st wash, transform your hair to softer, resilient hair with up to 97% damage protection against breakage & split ends, as based on lab-tests vs non-conditioning shampoo. ASC Ref. Code U100P072617C 
         </p>
       </div>
       <div id="ingredients" class="tab-content">
         <p>
-            Water, Cetearyl Alcohol, Dimethiconol, Behentrimonium Chloride, Perfume, Diglycerin, Paraffin, Dipropylene Glycol, Cetyl Palmitate, Citric Acid, Disodium EDTA, TEA-Dodecylbenzenesulfonate, DMDM Hydantoin, Cyclotetrasiloxane, Lysine HCl, Benzyl Alcohol, Magnesium Nitrate, Panthenol, Methylchloroisothiazolinone, Magnesium Chloride, Iodopropynyl Butylcarbamate, Methylisothiazolinone, Acetic Acid, Sodium Sulfate, Sodium Chloride, CI 42090, CI 47005   
+            Water, Cetearyl Alcohol, Dimethicone, Behentrimonium Chloride, Perfume, Dipropylene Glycol, Stearamidopropyl Dimethylamine, Amodimethicone, Sodium Chloride, Lactic Acid, Cyclotetrasiloxane, Disodium EDTA, Phenoxyethanol, Cetrimonium Chloride, PEG-7 Propylheptyl Ether, Lysine HCl, Magnesium Nitrate, Panthenol, Methylchloroisothiazolinone, Magnesium Chloride, Methylisothiazolinone, Citric Acid, Acetic Acid, Sodium Sulfate, CI 42090 
         </p>
       </div>
       <div id="how-to-use" class="tab-content">
