--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h3>Triple Keratin Rescue Collection</h3>
             </div>
             <div class="card" data-name="Hydra Fresh Range Colletions">
-                <a href="productspage-light.conditioner.html"><img src="assets/images/hydra-bouncy.png" alt="Rich Organics"></a>
+                <a href="productspage-light-conditioner.html"><img src="assets/images/hydra-bouncy.png" alt="Rich Organics"></a>
                 <div class="card-content"></div>
                 <h3>Rich Organics Collection</h3>
             </div>
