--- a/productspage-hairtreatment.html
+++ b/productspage-hairtreatment.html
@@ -20,8 +20,8 @@
             <a href="#">Products</a>
             <div class="dropdown-content">
                 <a href="productspage-conditioner.html">Conditioner</a>
-                <a href="productspage-ultraconditioner.html">Ultra Conditioners</a>
-                <a href="productspage-lightconditioner.html">Light Conditioners</a>
+                <a href="productspage-ultra-cond.html">Ultra Conditioners</a>
+                <a href="productspage-light-conditioner.html">Light Conditioners</a>
                 <a href="productspage-hairtreatment.html">Hair Treatment</a>
             </div>
         </div>
