--- a/productspage-ultra-cond.html
+++ b/productspage-ultra-cond.html
@@ -48,7 +48,7 @@
     <div class="products-section">
         <div class="products">
             <div class="product-card">
-                <a href="ultracond-prod1.html" style="text-decoration: none;">
+                <a href="products-subpages/ultracond-prod1.html" style="text-decoration: none;">
                     <img class="product-image-default" src="assets/images/cream silk triple keratin rescue hair fall defiance ultra conditioner.jpg" alt="Product 1">
                     <img class="product-image-hover" src="assets/images/Heart evangelista hover pic_products conditioner.jpg" alt="Product 1 Hover">
                     <h3>Cream Silk Triple Kertain Rescue Hair Fall Defiance Ultra Conditioner</h3>
@@ -60,11 +60,11 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
-                <a href="ultracond-prod1.html"><button>BUY NOW</button></a>
+                <a href="products-subpages/ultracond-prod1.html"><button>BUY NOW</button></a>
             </div>
     
             <div class="product-card">
-                <a href="ultracond-prod2.html" style="text-decoration: none;">
+                <a href="products-subpages/ultracond-prod2.html" style="text-decoration: none;">
                     <img class="product-image-default" src="assets/images/cream silk triple keratin rescue conditioner ultimate color revive.jpg" alt="Product 2">
                     <img class="product-image-hover" src="assets/images/Catriona Gray hover pic_products.jpg" alt="Product 2 Hover">
                     <h3>Cream Silk Keratin Treatment</h3>
@@ -76,7 +76,7 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                 </div>
-                <a href="ultracond-prod2.html"><button>BUY NOW</button></a> 
+                <a href="products-subpages/ultracond-prod2.html"><button>BUY NOW</button></a> 
             </div>
     
             <div class="product-card">
