adjusted the directory

--- a/products-subpages/lightcond-prod2.html
+++ b/products-subpages/lightcond-prod2.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/single-products-style.css" />
+    <link rel="stylesheet" href=".//assets/css/single-products-style.css" />
   </head>
 
   <body>
