--- a/products-subpages/conditioner-prod2.html
+++ b/products-subpages/conditioner-prod2.html
@@ -6,37 +6,30 @@
     <title>Cream Silk</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-    />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-      rel="stylesheet"
-    />
+      crossorigin="anonymous"/>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="../assets/css/single-products-style.css" />
   </head>
 
   <body>
     <div class="header">
-      <a href="index.html"><img src="assets/images/Cream silk logo.webp" alt="Cream Silk Logo"></a>
+      <a href="../index.html"><img src="../assets/images/Cream silk logo.webp" alt="Cream Silk Logo"></a>
       <div class="nav">
           <div class="dropdown">
               <a href="#">Products</a>
               <div class="dropdown-content">
-                  <a href="productspage-conditioner.html">Conditioner</a>
-                  <a href="productspage-ultra-cond.html">Ultra Conditioners</a>
-                  <a href="productspage-lightconditioner.html">Light Conditioners</a>
-                  <a href="productspage-hairtreatment.html">Hair Treatment</a>
+                  <a href="../productspage-conditioner.html">Conditioner</a>
+                  <a href="../productspage-ultra-cond.html">Ultra Conditioners</a>
+                  <a href="../productspage-lightconditioner.html">Light Conditioners</a>
+                  <a href="../productspage-hairtreatment.html">Hair Treatment</a>
               </div>
           </div>
-          <a href="about-us-page.html">About Us</a>
+          <a href="../about-us-page.html">About Us</a>
       </div>
       <div class="search-bar">
           <i class="fa fa-search" aria-hidden="true"></i>
@@ -93,7 +86,7 @@
     </div>
 
     
-    <a href="productspage-conditioner.html" class="back-icon">
+    <a href="../productspage-conditioner.html" class="back-icon">
         <i class="fas fa-arrow-circle-left"></i> Back to Products Page
       </a>
 
@@ -104,20 +97,20 @@
       <div class="container">
           <div class="shop-now">
               <h3>SHOP NOW AT</h3>
-              <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="assets/images/Lazada logo.png"
+              <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/"><img src="../assets/images/Lazada logo.png"
                   alt="Lazada"></a>
               <a href="https://shopee.ph/unilever_personalcare?is_from_login=true"><img
-                  src="assets/images/Shopee logo.png" alt="Shopee"></a>
+                  src="../assets/images/Shopee logo.png" alt="Shopee"></a>
               <a href="https://www.watsons.com.ph/all-brands/b/154216/creamsilk"><img
-                  src="assets/images/watsons logo.png" alt="Watsons"></a>
+                  src="../assets/images/watsons logo.png" alt="Watsons"></a>
           </div>
           
           <div class="sitemap">
               <h3>NAVIGATION</h3>
               <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="productspage-conditioner.html">Products</a></li>
-                  <li><a href="about-us-page.html">About Us</a></li>
+                  <li><a href="../index.html">Home</a></li>
+                  <li><a href="../productspage-conditioner.html">Products</a></li>
+                  <li><a href="../about-us-page.html">About Us</a></li>
               </ul>
           </div>
           <div class="join-pack">
