--- a/about-us-page.html
+++ b/about-us-page.html
@@ -78,8 +78,6 @@
         </div>
         </div>
     </section>
-    
-
    
     <div class="golden-section"></div>
 
@@ -95,24 +93,27 @@
                 <h3>WEBPAGE</h3>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="productspage-conditioner.html">Products</a></li>
                     <li><a href="about-us-page.html">About Us</a></li>
                 </ul>
             </div>
             <div class="join-pack">
                 <h3>JOIN THE PACK!</h3>
                 <p>Share your email with us to receive the latest innovations, expert tips, VIP offers, and other relevant communications from Unilever. Unilever is committed to protecting your privacy and ensuring that your personal information is protected.</p>
-                <input type="email" placeholder="Email Address" required>
-                <button>SIGN UP</button>
+                <form id="sign-up">
+                    <input type="email" placeholder="Email Address" required>
+                    <button>SIGN UP</button>
+                </form>
+
             </div>
         </div>
         <div class="bottom">
             <p>©2024 Unilever. All rights reserved.</p>
-            <a href="#">Privacy Notice</a> |
-            <a href="#">Legal</a> |
-            <a href="#">Cookie Notice</a> |
+            <a href="https://www.unilevernotices.com/privacy-notices/philippines-english.html">Privacy Notice</a> |
+            <a href="https://www.hul.co.in/legal/">Legal</a> |
+            <a href="https://www.unilevernotices.com/cookie-notices/philippines-english.html">Cookie Notice</a> |
             <a href="#">Navigation</a> |
-            <a href="#">Accessibility</a>
+            <a href="https://notices.unilever.com/en/">Accessibility</a>
         </div>
     </footer>
 
