--- a/about-us-page.html
+++ b/about-us-page.html
@@ -108,7 +108,7 @@
             </div>
         </div>
         <div class="bottom">
-            <p>©2024 Unilever. All rights reserved.</p>
+            <p>©2024 Unilever. All rights reserved. FOR EDUCATIONAL PURPOSES ONLY</p>
             <a href="https://www.unilevernotices.com/privacy-notices/philippines-english.html">Privacy Notice</a> |
             <a href="https://www.hul.co.in/legal/">Legal</a> |
             <a href="https://www.unilevernotices.com/cookie-notices/philippines-english.html">Cookie Notice</a> |
