--- a/products-subpages/conditioner-prod1.html
+++ b/products-subpages/conditioner-prod1.html
@@ -153,12 +153,12 @@
   
       <div class="golden-line-footer"></div> 
       <div class="bottom">
-          <p>©2024 Unilever. All rights reserved.</p>
-          <a href="https://www.unilevernotices.com/privacy-notices/philippines-english.html">Privacy Notice</a> |
-          <a href="https://www.hul.co.in/legal/">Legal</a> |
-          <a href="https://www.unilevernotices.com/cookie-notices/philippines-english.html">Cookie Notice</a> |
-          <a href="#">Navigation</a> |
-          <a href="https://notices.unilever.com/en/">Accessibility</a>
+        <p>©2024 Unilever. All rights reserved. FOR EDUCATIONAL PURPOSES ONLY</p>
+        <a href="https://www.unilevernotices.com/privacy-notices/philippines-english.html">Privacy Notice</a> |
+        <a href="https://www.hul.co.in/legal/">Legal</a> |
+        <a href="https://www.unilevernotices.com/cookie-notices/philippines-english.html">Cookie Notice</a> |
+        <a href="#">Navigation</a> |
+        <a href="https://notices.unilever.com/en/">Accessibility</a>
       </div>
   </footer>
 
