--- a/productspage-ultra-cond.html
+++ b/productspage-ultra-cond.html
@@ -168,12 +168,12 @@
 
     <div class="golden-line-footer"></div> 
     <div class="bottom">
-        <p>©2024 Unilever. All rights reserved.</p>
-        <a href="#">Privacy Notice</a> |
-        <a href="#">Legal</a> |
-        <a href="#">Cookie Notice</a> |
+        <p>©2024 Unilever. All rights reserved. FOR EDUCATIONAL PURPOSES ONLY</p>
+        <a href="https://www.unilevernotices.com/privacy-notices/philippines-english.html">Privacy Notice</a> |
+        <a href="https://www.hul.co.in/legal/">Legal</a> |
+        <a href="https://www.unilevernotices.com/cookie-notices/philippines-english.html">Cookie Notice</a> |
         <a href="#">Navigation</a> |
-        <a href="#">Accessibility</a>
+        <a href="https://notices.unilever.com/en/">Accessibility</a>
     </div>
 </footer>
 
