updated titles and added favicons to all html

--- a/products-subpages/ultracond-prod3.html
+++ b/products-subpages/ultracond-prod3.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cream Silk</title>
+    <title>Ultimate Repair & Shine Triple Keratin Rescue Conditioner | Cream Silk</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -55,10 +56,10 @@
       <div class="card1">
         <img
           src="https://assets.unileversolutions.com/v1/1513944.png"
-          alt="ULTIMATE REPAIR & SHINE TRIPLE KERATINE RESCUE CONDITIONER "
+          alt="ULTIMATE REPAIR & SHINE TRIPLE KERATIN RESCUE CONDITIONER "
         />
         <h1>
-          ULTIMATE REPAIR & SHINE TRIPLE KERATINE RESCUE CONDITIONER
+          ULTIMATE REPAIR & SHINE TRIPLE KERATIN RESCUE CONDITIONER
         </h1>
         <p>
             Frizzy hair just doesn’t look healthy. NEW Ultimate Repair & Shine Conditioner, a deep conditioner for frizzy hair, is your Triple Keratin Rescue! Get the benefits of 3 Keratin products in 1 ultimate solution for healthy and shiny hair. It’s Cream Silk’s best conditioner for dry damaged hair and best deep conditioner for dry hair.
