--- a/products-subpages/ultracond-prod1.html
+++ b/products-subpages/ultracond-prod1.html
@@ -27,7 +27,7 @@
   <body>
     <div class="header">
       <a href="../index.html"
-        ><img src="../https://shorturl.at/uB5BH" alt="Cream Silk Logo"
+        ><img src="../assets/images/Cream silk logo.webp" alt="Cream Silk Logo"
       /></a>
       <div class="nav">
         <div class="dropdown">
