--- a/productspage-ultra-cond.html
+++ b/productspage-ultra-cond.html
@@ -51,7 +51,7 @@
             <div class="product-card">
                 <a href="products-subpages/ultracond-prod1.html" style="text-decoration: none;">
                     <img class="product-image-default" src="assets/images/cream silk triple keratin rescue hair fall defiance ultra conditioner.jpg" alt="Product 1">
-                    <img class="product-image-hover" src="assets/images/Heart evangelista hover pic_products conditioner.jpg" alt="Product 1 Hover">
+                    <img class="product-image-hover" src="assets/images/Pia Hover Ultra Conditioner 1.jpg" alt="Product 1 Hover">
                     <h3>Cream Silk Triple Kertain Rescue Hair Fall Defiance Ultra Conditioner</h3>
                 </a>
                 <div class="stars">
@@ -67,7 +67,7 @@
             <div class="product-card">
                 <a href="products-subpages/ultracond-prod2.html" style="text-decoration: none;">
                     <img class="product-image-default" src="assets/images/cream silk triple keratin rescue conditioner ultimate color revive.jpg" alt="Product 2">
-                    <img class="product-image-hover" src="assets/images/Catriona Gray hover pic_products.jpg" alt="Product 2 Hover">
+                    <img class="product-image-hover" src="assets/images/Pia Hover Ultra Conditioner 3.jpg" alt="Product 2 Hover">
                     <h3>Cream Silk Keratin Treatment</h3>
                 </a>
                 <div class="stars">
@@ -83,7 +83,7 @@
             <div class="product-card">
                 <a href="ultracond-prod3.html" style="text-decoration: none;">
                     <img class="product-image-default" src="assets/images/Cream silk ULTIMATE REPAIR & SHINE TRIPLE KERATIN RESCUE CONDITIONER.webp" alt="Product 3">
-                    <img class="product-image-hover" src="assets/images/Nadine Lustre hover pic_products.jpg" alt="Product 3 Hover">
+                    <img class="product-image-hover" src="assets/images/Pia Hover Ultra Conditioner 2.jpg" alt="Product 3 Hover">
                     <h3>Cream Silk Ultimate Repair and Shine Triple Keratine Rescue Conditioner</h3>
                 </a>
                 <div class="stars">
@@ -99,7 +99,7 @@
             <div class="product-card">
                 <a href="ultracond-prod4.html" style="text-decoration: none;">
                     <img class="product-image-default" src="assets/images/CREAM SILK ULTIMATE STRAIGHT.jpg" alt="Product 4">
-                    <img class="product-image-hover" src="assets/images/Pia Wurtzbach hover pic_products.jpg" alt="Product 4 Hover">      
+                    <img class="product-image-hover" src="assets/images/Pia Hover Ultra Conditioner 4.jpg" alt="Product 4 Hover">      
                     <h3>Cream Silk Ultimate Straight Conditioner</h3>
                 </a>  
                 <div class="stars">
@@ -115,7 +115,7 @@
             <div class="product-card">
                 <a href="#" style="text-decoration: none;">
                     <img class="product-image-default" src="assets/images/keratin-rescue.png" alt="Product 5">
-                    <img class="product-image-hover" src="assets/images/Yassi Pressman hover pic_products.jpg" alt="Product 5 Hover">    \
+                    <img class="product-image-hover" src="assets/images/Pia Hover Ultra Conditioner 5.jpg" alt="Product 5 Hover">    \
                     <h3>Cream Silk Triple Keratin Rescue Ultimate Straight</h3>             
                 </a>             
                 <div class="stars">
