Updated all products

--- a/productspage-light-conditioner.html
+++ b/productspage-light-conditioner.html
@@ -37,11 +37,11 @@
     <div class="golden-line"></div> 
 
     <div class="banner">
-        <h1>OUR ULTRA CONDITIONER COLLECTION</h1>
+        <h1>OUR LIGHT CONDITIONER COLLECTION</h1>
     </div>
 
     <div class="content">
-        <img src="assets/images/Cream silk_UltraConditionerProducts_Banner.jpg" alt="Conditioner Collection">
+        <img src="assets/images/cream silk light banner.jfif" alt="Conditioner Collection">
     </div>
 
     <div class="golden-section"></div>
@@ -50,8 +50,8 @@
         <div class="products">
             <div class="product-card">
                 <a href="products-subpages/lightcond-prod1.html" style="text-decoration: none;">
-                    <img class="product-image-default" src="assets/images/cream silk triple keratin rescue hair fall defiance ultra conditioner.jpg" alt="Product 1">
-                    <img class="product-image-hover" src="assets/images/Heart evangelista hover pic_products conditioner.jpg" alt="Product 1 Hover">
+                    <img class="product-image-default" src="assets/images/Cream Silk Hydra Fresh Bouncy.jpg" alt="Product 1">
+                    <img class="product-image-hover" src="assets/images/Catriona hover 2 light.jpg" alt="Product 1 Hover">
                     <h3>Cream Silk Hydra Fresh and Bouncy</h3>
                 </a>
                 <div class="stars">
@@ -66,8 +66,8 @@
     
             <div class="product-card">
                 <a href="products-subpages/lightcond-prod2.html" style="text-decoration: none;">
-                    <img class="product-image-default" src="assets/images/cream silk triple keratin rescue conditioner ultimate color revive.jpg" alt="Product 2">
-                    <img class="product-image-hover" src="assets/images/Catriona Gray hover pic_products.jpg" alt="Product 2 Hover">
+                    <img class="product-image-default" src="assets/images/HYDRATED LIGHT.webp" alt="Product 2">
+                    <img class="product-image-hover" src="assets/images/Catriona hover 1 light.jpg" alt="Product 2 Hover">
                     <h3>Cream Silk Hydra Fresh and Hydrated</h3>
                 </a>
                 <div class="stars">
