--- a/productspage-ultra-cond.html
+++ b/productspage-ultra-cond.html
@@ -115,7 +115,7 @@
             <div class="product-card">
                 <a href="products-subpages/ultracond-prod5.html" style="text-decoration: none;">
                     <img class="product-image-default" src="assets/images/keratin-rescue.png" alt="Product 5">
-                    <img class="product-image-hover" src="assets/images/Pia Hover Ultra Conditioner 5.jpg" alt="Product 5 Hover">    \
+                    <img class="product-image-hover" src="assets/images/Pia Hover Ultra Conditioner 5.jpg" alt="Product 5 Hover">    
                     <h3>Cream Silk Triple Keratin Rescue Ultimate Straight</h3>             
                 </a>             
                 <div class="stars">
