added a separator for history

--- a/about-us-page.html
+++ b/about-us-page.html
@@ -58,6 +58,8 @@
             <img src="assets/images/condition-greater.jpg" alt="Creamsilk Image">
         </div>
     </section>
+    
+    <div class="golden-section"></div>
 
     <section class="history-content-section">
         <div class="history-text-container">
