updated header of about us and logo of home page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </script>    
 
     <div class="header">
-        <a href="index.html"><img src="https://shorturl.at/uB5BH" alt="Cream Silk Logo"></a>
+        <a href="index.html"><img src="assets/images/Cream silk logo.webp" alt="Cream Silk Logo"></a>
         <div class="nav">
             <div class="dropdown">
                 <a href="#">Products</a>
